@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2001/07/29 01:12:58 hubertf Exp $
-
-SHA1 (agqt-0.5.tar.bz2) = 64dc30898939e0685c522c0a4ae1e4da959a15bc
-Size (agqt-0.5.tar.bz2) = 66096 bytes
